# sql_alc_templates

./: .gitignore  config.py  database.py  main.py  models.py  pyproject.toml  test.py  test2.py
queries/: core.py  orm.py
